--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 <P class="terms">By clicking the button you are agreeing to our <a href="">Terms and Services</a></P>
             </form>
         </div>
+        <div>
+            <img src="./Images/DolphJs-logo-small.png" alt="DolphJs" />
+        </div>
     </section>
 
 
